# modulation

./: .gitignore  network_2feature_n_vs_a.py  no_network.py  shut.py  thre.py
neuro-align/: .gitignore  README.md  pyproject.toml  reproduce_panels_from_csv.py
neuro-align/configs/: default_smallpc1_custom.yaml  paper.yaml  paper_panel_bc.yaml  paper_panel_d.yaml  pc1_align_ball.yaml  smallpc1_ball.yaml  smallpc1_ball_large.yaml  smallpc1_ball_small.yaml  smallpc1_box.yaml
neuro-align/outputs/default_smallpc1_custom/: default_smallpc1_custom_summary.json  default_smallpc1_custom_triad_summary.json
neuro-align/outputs/default_smallpc1_custom_sweep/: default_smallpc1_custom_sweep.json
neuro-align/outputs/default_smallpc1_custom_triad_sweep/: default_smallpc1_custom_triad_sweep.json
neuro-align/outputs/paper/: panel_b_axes.json  panel_b_points.csv  panel_c_activity_data.csv  panel_c_data.csv  panel_c_gopt_data.csv  paper_triad_summary.json
neuro-align/outputs/paper_panel_bc/: panel_b_axes.json  panel_b_points.csv  panel_c_activity_data.csv  panel_c_gopt_data.csv  paper_panel_bc_triad_summary.json
neuro-align/outputs/paper_panel_d_triad_sweep/: panel_d_data.csv  paper_panel_d_triad_sweep.json
neuro-align/outputs/paper_triad_sweep/: panel_d_data.csv  paper_triad_sweep.json
neuro-align/outputs/pc1_align_ball/: pc1_align_ball_triad_summary.json
neuro-align/outputs/small_pc1_ball_large/: small_pc1_ball_large_triad_summary.json
neuro-align/outputs/small_pc1_ball_large_triad_sweep/: small_pc1_ball_large_triad_sweep.json
neuro-align/src/alignlab/: __init__.py  (+8 more)
(+166 files in other folders)
