[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignlab"
version = "0.1.0"
description = "Alignment experiments for population codes (PC alignment with constraints)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
